# R-Python-Integrated-Container-Image

./: Hello.r  LICENSE  README.md  cuda.ipynb  pyproject.toml
.devcontainer/: Dockerfile  configure_environment.sh  devcontainer.json  install-dev-tools.sh  post_attach.sh  post_start.sh  renv-setup.r
